# internal/dto/bookmark/request.go
@@ -1,0 +1,6 @@
+package bookmark
+
+type CreateBookmarkRequest struct {
+	Description string `json:"description" binding:"required,min=2,max=500"`
+	URL         string `json:"url" binding:"required,url"`
+}
